--- a/src/main/webapp/WEB-INF/views/themes/list.jspx
+++ b/src/main/webapp/WEB-INF/views/themes/list.jspx
@@ -5,19 +5,14 @@
      version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <spring:message code="label_theme_list" var="labelThemeList"/>
-    <spring:message code="label_theme_title" var="labelThemeTitle"/>
-    <spring:message code="label_theme_start_date" var="labelThemeStartDate" />
-    <spring:message code="label_theme_close_date" var="labelThemeCloseDate" />
-
-    <h1>${labelThemeList}</h1>
+    <h1>Список тем</h1>
     <c:if test="${not empty themes}">
         <table>
             <thead>
             <tr>
-                <th>${labelThemeFirstName}</th>
-                <th>${labelThemeStartDate}</th>
-                <th>${labelThemeCloseDate}</th>
+                <th>Название</th>
+                <th>Дата открытия</th>
+                <th>Дата закрытия</th>
             </tr>
             </thead>
             <tbody>
